# user-behavior-analytics

./: .gitattributes  .gitignore  .gitignore.bak.20260328_115606  .report_all_files.txt  CLAUDE.md  PROJECT_REPORT.md  RAPPORT_AVANCEMENT.md  RAPPORT_AVANCEMENT_DETAILLE_2026-04-13.md  RAPPORT_AVANCEMENT_SIMPLE_2026-04-11.md  RAPPORT_IA.md  RAPPORT_KPI_CHARTS.md  REAL_DATA_INTEGRATION.md  TRIAL_INTEGRATION_SUMMARY.md  activity_report.md  docker-compose.yml  mcp.json  reorganize_project.py  reorganize_report.json  reorganize_report_apply.json  usecase_global.puml
docs/: kpis.md  (+3 more)
user-analytics-backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  compile_err.txt  note.txt  pyproject.toml  requirements.txt  tmp_alembic_ver.py  tmp_fix_alembic_version.py  tmp_idx_check_post_fail.py  tmp_idx_sizes.py  tmp_idx_sizes_fixed.py  tmp_p0b_dupcheck.py  tmp_p0b_inventory.py  tmp_post_upgrade_check.py
user-analytics-backend/alembic/: env.py
user-analytics-backend/alembic/versions/: 3939f80c5a66_seeders.py  (+17 more)
user-analytics-backend/app/: main.py
user-analytics-backend/migrations/: create_import_logs.sql
user-analytics-backend/ml_models/: anomalies.py  churn_metrics.joblib  churn_model.joblib  churn_predictor.py  segmentation_kmeans.joblib  segmentation_trainer.py
user-analytics-backend/scripts/: benchmark_cache_endpoints.py  compute_cohorts.py  verify_data.py
user-analytics-backend/tests/: conftest.py  test_analytics_overview.py  test_auth.py  test_business_rules.py  test_churn.py  test_churn_anchor_logic.py  test_rbac.py  test_retention.py
(+266 files in other folders)
